Add the start of a Lua C example.

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,6 +1,13 @@
+CFLAGS += -I/usr/local/Cellar/lua/5.4.6/include/lua
+CFLAGS += -L/usr/local/Cellar/lua/5.4.6/lib
+CFLAGS += -llua
+
 ip:
 	cc showip.c -o showip.out
 
 simp:
 	cc simpleserver.c -o simpleserver.out
 	cc simpleclient.c -o simpleclient.out
+
+lua:
+	cc $(CFLAGS) calllua.c -o calllua.out
