--- a/.envrc
+++ b/.envrc
@@ -1,1 +1,4 @@
-export LUA_PATH='lua/?.lua;lua/?/init.lua;;'
+PATH_add .luarocks/bin
+
+export LUA_PATH='lua/?.lua;lua/?/init.lua;.luarocks/share/lua/5.4/?.lua;.luarocks/share/lua/5.4/?/init.lua;;'
+export LUA_CPATH='.luarocks/lib/lua/5.4/?.so;;'
