--- a/.envrc
+++ b/.envrc
@@ -1,4 +1,5 @@
 PATH_add .luarocks/bin
+PATH_add bin
 
 export LUA_PATH='lua/?.lua;lua/?/init.lua;.luarocks/share/lua/5.4/?.lua;.luarocks/share/lua/5.4/?/init.lua;;'
 export LUA_CPATH='.luarocks/lib/lua/5.4/?.so;;'
