--- a/.envrc
+++ b/.envrc
@@ -2,4 +2,4 @@ PATH_add .luarocks/bin
 PATH_add bin
 
 export LUA_PATH='lua/?.lua;lua/?/init.lua;.luarocks/share/lua/5.4/?.lua;.luarocks/share/lua/5.4/?/init.lua;;'
-export LUA_CPATH='.luarocks/lib/lua/5.4/?.so;;'
+export LUA_CPATH='lua/?.so;.luarocks/lib/lua/5.4/?.so;;'
