Clean up commands docs.

--- a/opencode.jsonc
+++ b/opencode.jsonc
@@ -6,5 +6,10 @@
       "command": ["beads-mcp"],
       "enabled": true
     }
+  },
+  "permissions": {
+    "bash": {
+      "git push": "ask"
+    }
   }
 }
