Add .env support.

--- a/.envrc
+++ b/.envrc
@@ -3,3 +3,5 @@ PATH_add bin
 
 export LUA_PATH='lua/?.lua;lua/?/init.lua;.luarocks/share/lua/5.4/?.lua;.luarocks/share/lua/5.4/?/init.lua;;'
 export LUA_CPATH='lua/?.so;.luarocks/lib/lua/5.4/?.so;;'
+
+dotenv
